bug 91696, Meta tag does not work, r=shanjian , sr=vidur